# passthrough-dna-redux

./: .gitignore  .hcignore  README.md  conductor-config.toml  config.nix  default.nix  holoscape-bundle.toml
test/: index.js  package-lock.json  package.json  stress.js
test-manual/agent1/: conductor-config.toml
test-manual/agent2/: conductor-config.toml
test-manual/agent3/: conductor-config.toml
test/behavior/: index.ts
test/stress_test/: all-on.ts  direct-message.ts  easy.ts  index.ts  poll-for.ts  sanity.ts  telephone-common.js  telephone-games.ts  telephone-hammer.ts
ui/: hc-web-client-0.5.3.browser.min.js  hc-web-client-0.5.3.browser.min.js.map  index.html
zomes/main/code/: .hcbuild  Cargo.toml
zomes/main/code/src/: lib.rs
