[package]
name = "main"
version = "0.1.0"
authors = ["Willem Olding <willemolding@gmail.com>"]
edition = "2018"

[dependencies]
serde = "=1.0.104"
serde_json = { version = "=1.0.104", features = ["preserve_order"] }
serde_derive = "=1.0.104"
hdk = "0.0.43-alpha3"
hdk_proc_macros = "0.0.43-alpha3"
holochain_wasm_utils = "0.0.43-alpha3"
holochain_json_derive = { version = "0.0.1-alpha2" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
